# new-one-test

./: .env.deepseek.example  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  10_FACTORIES_SIMULATION_REPORT.md  ACTUAL_DELIVERY_STATUS.md  ADVANCED_FEATURES_COMPLETE.md  ADVANCED_REPORTS_SYSTEM_COMPLETE.md  AI_COPILOT_SYSTEM_COMPLETE.md  AUDIT_README.md  CHANGELOG.md  COMPARISON_WITH_MVP_REPORT.md  COMPLETE_INTEGRATION_GUIDE.md  CONTRIBUTING.md  DATA_VISUALIZATION_AI_REPORT.md  DEEPSEEK_INTEGRATION_COMPLETE.md  DELIVERY_READY_REPORT.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_REPORT.md  DEVELOPER_GUIDE.md  DOCS_INDEX.md  Dockerfile  EGYPT_MARKET_STRATEGY.md  ENABLE_ADVANCED_FEATURES.md  EXECUTION_PLAN.md  FEATURES_COMPLETED_REPORT.md  FILES_INDEX_SUMMARY.md  FINAL_DELIVERY_REPORT.md  FINAL_DELIVERY_SUMMARY.md  FINAL_HANDOFF.md  FINAL_HANDOFF_COMPLETE.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_SUCCESS_REPORT.md  FUNGAL_SIMULATION_QUICKSTART.md  FUTURE_ROADMAP.md  GAPS_CLOSURE_IMPLEMENTATION.md  GAP_CLOSURE_ACTION_PLAN.md  GAP_CLOSURE_FINAL_REPORT.md  GITHUB_UPLOAD_VERIFICATION.md  (+95 more)
.github/: copilot-instructions 2.md  copilot-instructions.md  dependabot 2.yml  pull_request_template 2.md  pull_request_template.md
21:12:2025/: HADEROS AI CLOUD_ The Operating System for Emerging Market Businesses.md  HADEROS AI CLOUD：面向新兴市场的下一代企业数字化平台.md  التحليل التنافسي الشامل_ HADEROS في مواجهة عمالقة سوق التجارة الإلكترونية.md  ⏱️ تقييم الوقت - حالة orders.ts.md  ✅ إصلاح الفجوات المتبقية - orders.ts.md  ✅ إضافة Bio-Modules لـ payment.ts - مكتمل.md  ✅ اختبار التكامل - مكتمل وجاهز.md  ✅ تحسين cod.router.ts - مكتمل.md  ✅ تحسين orders.createOrder - Batch Insert.md  ✅ تحسين products.ts - مكتمل.md  ✅ تحسين الملفات - products, inventory, cod - مكتمل.md  ✅ ملخص الإنجاز النهائي - HADEROS مكتمل.md  ✅ نظام النسخ الاحتياطي التلقائي - جاهز.md  ⭐ التقييم النهائي - orders.ts 96.5%.md  🎉 الملخص النهائي الشامل - نظام HADEROS.md  🎯 خريطة الأداء الاستراتيجية - تحليل Routers.md  🏆 cod.router.ts - مكتمل 100%.md  🏆 التقرير النهائي الشامل - إنجاز HADEROS.md  💡 التوصية الاستراتيجية - الخطوة التالية.md  💬 دليل نظام التواصل الموحد.md  📊 التقرير النهائي - orders.ts جاهز للتقييم.md  📊 تحليل تكامل Bio-Modules مع الطلبات.md  📊 تحليل شامل للمشروع - فهم كامل للنظام.md  📊 تقرير الحالة النهائي - HADEROS.md  📋 تقرير المراجعة - orders.createOrder.md  📋 ملخص الإنجاز النهائي - HADEROS.md  🔍 تحليل cod.router.ts - التقييم النهائي.md  🔧 إصلاح الفجوات - orders.createOrder.md  🚀 HADEROS Marketer Platform - تقرير الميزة التنافسية.md  🚀 خطة الإطلاق المؤسسي - الأسبوعين القادمين.md  🚀 خطة المرحلة التالية - خريطة الطريق التقنية.md  (+1 more)
data/archive/: .dockerignore 2  .env.example  .gitignore  0004_dear_blue_blade 2.sql  01-onboarding.md  90_day_action_plan 2.md  ACTIVATION_GUIDE.md  AIChat.tsx  AdminDashboard.tsx  App.tsx  BIOMODULE_FACTORY_COMPLETE.md  BarcodeScanner 2.tsx  CTO_TECHNICAL_REPORT 2.md  Campaigns 2.tsx  CollectionsTracking.tsx  CreateSupervisor 2.tsx  DATA_IMPORT_SUMMARY.md  DOMAIN_INFO 2.md  DashboardLayout 2.tsx  EMPLOYEE_CREDENTIALS.md  EXAMPLES.md  EmployeeProfile 2.tsx  FRONTEND_INTEGRATION.md  GIT_STATUS_REPORT.md  GenerateEmployeeAccounts 2.tsx  HADEROS_GAP_ANALYSIS_COMPLETE 2.md  HANDOVER_REPORT 2.md  INTEGRATIONS_AUDIT 2.md  InvestmentPitch.tsx  InvestorPortal.tsx  KAIADemo 2.tsx  LaunchKPIs 2.tsx  NOW_SHOES_COMPANY_PROFILE 2.md  NowShoesDashboard.tsx  OTPVerification.tsx  ProductImageManager.tsx  QUICK_START_GUIDE.md  README.md  RegisterEmployee.tsx  RevenueCalculator 2.tsx  (+189 more)
data/archive/media/: ADMIN_AUTH_README 2.md  ADMIN_SETUP_COMPLETE.md  CLEAN_DEPLOYMENT 2.md  CONTRIBUTING.md  DEPLOYMENT 2.md  IMPLEMENTATION_COMPLETE.md  LOCAL_SETUP 2.md  MODULE_BUILDING_PROCESS.md  README.md  SECURITY_FILE_INDEX 2.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_README.md  SECURITY_WORK_SUMMARY 2.md  SETUP_SUMMARY 2.md  SUPER_ADMIN_READY.md  ✅ GitHub Verification Complete 2.md  🎯 Shopify Webhook Implementation Status 2.md  🎯 قائمة المهام حسب الأولوية - الإطلاق يوم الأحد 22 ديسمبر 2024.md  📊 HaderOS Platform - Project Statistics.md  📚 دليل وثائق الاستلام - HaderOS MVP 2.md  📦 HaderOS - Final Delivery Package 2.md  🚀 HaderOS Platform - Complete System Guide 2.md
(+1207 files in other folders)
