[tool.poetry]
name = "haderos-platform"
version = "1.0.0"
description = "HaderOS Platform - Bio-Inspired Intelligent Governance Platform with KAIA Theology Engine"
authors = ["HaderOS Team <support@haderosai.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
redis = "^5.0.1"
kafka-python = "^2.0.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.26.0"
openai = "^1.7.2"
langchain = "^0.1.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
click = "^8.1.7"
rich = "^13.7.0"
prometheus-client = "^0.19.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
web3 = "^6.15.0"
eth-account = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pylint = "^3.0.3"
ipython = "^8.20.0"

[tool.poetry.scripts]
haderos = "backend.bio_module_factory.cli.main:cli"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=backend --cov-report=html --cov-report=term"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
